# elmlike

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Setup.hs  build.sh  build_elmlike_example.sh  build_log.txt  changelog.txt  elmlike.cabal  meson.build
csrc/: CMakeLists.txt  build.sh  elmlike.cc  elmlike.h  elmlike_main.cc  get_ghc_info.py  renderer.cc  renderer.h  vcpkg.json
csrc/tests/: gui_test.cc
src/: ElmLike.hs
test/: Main.hs
